2010-02-16  Tobias Burnus  <burnus@net-b.de>

PR fortran/43040
        * gfortran.h (gfc_isym_id): Rename GFS_ISYM_GAMMA to
        * GFS_ISYM_TGAMMA.
        * intrinsic.c (add_functions): Ditto.
        * iresolve.c (gfc_resolve_gamma): Call tgamma instead of gamma.
        * mathbuiltins.def: Use TGAMMA instead of GAMMA with "tgamma".



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156796 138bc75d-0d04-0410-961f-82ee72b054a4